# zen

./: .actrc  .aliases  .api_change_requests.json  .api_registry.json  .claude-hooks.json  .coverage  .coveragerc  .dev_services.json  .dev_services_test.json  .dockerignore  .env.auth.example  .env.backup  .env.ci  .env.dev  .env.development  .env.development.template  .env.docker  .env.example  .env.production  .env.staging  .env.staging.comprehensive  .env.staging.e2e  .env.staging.example  .env.staging.issue919  .env.staging.template  .env.staging.test  .env.staging.tests  .env.test  .env.test.fixed  .env.test.local  .env.test.template  .env.testing  .env.unified.template  .env.websocket.test  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config-permissive.yaml  .pre-commit-config-real-tests.yaml  .pre-commit-config.yaml  (+4971 more)
...prompts/: audit_prompts.md  context.md  create_spec.md  deepthink-docker-crash-review.md  deploy_prompts.md  docker-fix.md  docker_iteration_prompts.md  files_to_review  gap_real_system.md  improve_test_coverage.md  major-refactor-process.md  mock-fix.md  prove-it.md  remediate_prompts.md  service  test_prompts.md  testing.md  weakest_link_value_protection.md
.claude/: AGENTS.md  settings.json  settings.local.json
.dev_cache/: startup_cache.json
.dev_launcher_cache/: dependency_cache.json  hashes.json  migration_cache.json  startup_cache.json  state.json
.githooks/: README.md  check-test-organization.py  config.json  pre-commit  pre-commit-imports  pre-commit-old  pre-commit-python.py  pre-commit-secrets  pre-commit.cmd
.github/: ACTIONS_README.md  ACT_TESTING_GUIDE.md  README.md  STAGING_ENHANCEMENTS.md  act-test-push.json  netra.yml  pull_request_template_enhanced.md  release.yml  staging.yml  workflow-config.yml
.pre-commit-hooks/: factory-contract-validation.py
.service_discovery/: auth.json  backend.json  cross_service_token
.service_registry/: timing_test_service.json
.temp/: APEX_INTEGRATION.md  CLI_THREAD_ID_FIX_SUMMARY.md  CLI_THREAD_RESOLUTION_CHANGES.md  TEST_PLAN_1_Platform_Path_Resolution.md  TEST_PLAN_2_WebSocket_Resilience.md  TEST_PLAN_3_CLI_Argument_Precedence.md  TRANSMISSION_PROOF.md  handshake_update.py
Deepthinkxmls/: ai_factory_patterns.xml  anti_regression.xml  code_changes.xml  independent_services.xml  index.xml  no_test_stubs.xml  system_boundaries.xml
FAILING-TEST-GARDENER/: FAILING-TEST-GARDENER-WORKLOG-agents-2025-09-13-19-58.md  FAILING-TEST-GARDENER-WORKLOG-critical-2025-09-13-22-04.md  FAILING-TEST-GARDENER-WORKLOG-critical-2025-09-13.md
Legacy_marketing/: agents.html  cost-family.html  maze.html  pilot.html  structured-generation.html  thank-you.html
OUTSIDE CONTEXT WINDOW/: prompt.txt  troubleshooting.txt
Other/: openapi.json  run_script.py
SPEC/: 3tier_persistence_architecture.xml  AUTH_FLOW_DOCUMENTATION.md  CRITICAL_DEV_AUTOLOGIN_DEPENDENCIES.md  CROSS_SYSTEM_MASTER_INDEX.md  Instructions __ Base.md  MASTER_GITHUB_WORKFLOW.xml  MISSION_CRITICAL_NAMED_VALUES_INDEX.xml  NACIS_Import_Requirements.md  NACIS_Integration_Design.md  PRODUCTION_SECRETS_ISOLATION.xml  SPEC OAuth Login.txt  SPEC_  WS.md  SPEC_ [CONTROL] SubAgents Overview.md  SPEC_Chat.txt  SYSTEM_INTEGRATION_MAP.xml  Status.xml  TRIAGE_SUB_AGENT_SPEC.xml  acceptable_duplicates.xml  admin_unified_experience.xml  agent_architecture.xml  agent_golden_pattern.xml  agent_pagerank.xml  agent_state_management.xml  agent_testing.xml  agent_tracking.xml  agent_websocket_bridge_pattern.xml  ai-dev-productivity.xml  ai_factory_patterns.xml  ai_factory_status_report.xml  ai_native_meta_process.md  ai_native_meta_process.xml  ai_slop_prevention_philosophy.xml  ai_slop_prevention_spec.xml  alembic_configuration.xml  anti_regression.xml  api_dual_channel_architecture.xml  api_routes.xml  app_business_value.xml  architecture.xml  async_session_management.xml  (+223 more)
agent_to_agent/: critical_tests_report.md  frontend_comprehensive_checkup_report.md  integration_tests_implementation_report.md
agent_to_agent_status_updates/: AI_FACTORY_PRODUCTIVITY_REPORT_2025_01_18.md  actions_to_meet_goals_modernization_complete.md  admin_tool_modernization_master_status.md  batch_1_completion_summary.md  broadcast_modernization_status.md  connection_modernization_status.md  corpus_admin_modernization_complete.md  data_agent_core_status.md  data_execution_engine_modernization_complete.md  data_fetching_modernization_complete.md  data_operations_modernization_status.md  data_sub_agent_modernization_status.md  demo_agents_modernization_status.md  demo_core_status.md  execution_core_modernization_complete.md  master_modernization_orchestrator_status.md  master_modernization_status.md  master_modernization_status_batch1_complete.md  metrics_analyzer_modernization_status.md  modernization_master_status.md  optimizations_agent_status.md  state_management_modernization_status.md  supervisor_modernization_complete.md  supervisor_modernization_status.md  synthetic_data_modernization_status.md  websocket_modernization_master_status.md
analytics/: README.md  requirements.txt
analytics_service/: __init__.py  example_usage.py  main.py  requirements.txt  run_ssot_compliance_tests.py  test_connection.py
app/: auth_dependencies.py  background.py  cloud_environment_detector.py  cloud_run_startup.py  config.py  config_environment.py  config_envvars.py  config_loader.py  config_manager.py  config_secrets.py  config_secrets_manager.py  dependencies.py  logging_config.py  logging_config_enhanced.py  main.py  pytest.ini  redis_manager.py  shutdown.py  startup.py  startup_checks.py  startup_module.py  ws_manager.py  ws_manager_backup.py  ws_manager_broadcasting.py  ws_manager_connections.py  ws_manager_core.py  ws_manager_messaging.py  ws_manager_refactored.py  ws_manager_test_compat.py
architecture_docs/: GITHUB_WORKFLOWS_ROOT_CAUSE_ANALYSIS.md
audit/: GOLDEN_PATH_GIT_AUDIT_20250909.md  test-fix-verification-issue-161.md
auth-proxy/: main.py
auth_service/: Dockerfile  ISSUE_925_PHASE_1_RESULTS.md  ISSUE_925_PHASE_2_COMPLETION_REPORT.md  POSTGRES_COMPLIANCE_SUMMARY.md  (+37 more)
(+37024 files in other folders)
