[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "netra-apex"
version = "1.0.0"
description = "Netra Apex AI Optimization Platform"
authors = [{name = "Netra Systems", email = "dev@netra.ai"}]
license = {text = "Proprietary"}
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = []
test = []

[tool.setuptools.packages.find]
where = ["."]
include = ["test_framework*", "shared*", "netra_backend*", "auth_service*"]

[tool.pytest.ini_options]
# Optimized pytest configuration for improved test collection
minversion = "6.0"
pythonpath = ["."]  # Add project root to Python path for test_framework imports
testpaths = [
    "tests",
    "netra_backend/tests",
    "auth_service/tests"
]
python_files = [
    "test_*.py",
    "*_test.py"
]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Performance optimizations for test collection
cache_dir = ".pytest_cache"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"

# Parallel execution settings
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--timeout=120",
    "--tb=short",
    "--maxfail=10",
    "--import-mode=importlib",  # Faster import mode
    "--cache-clear",  # Clear cache if stale
    "-p no:randomly",  # Disable random test order for consistent collection
    "-s",  # Disable I/O capture - fixes Python 3.13.7 ValueError compatibility (Issue #561)
]

# Asyncio settings
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# File ignoring (using norecursedirs instead of collect_ignore)
norecursedirs = [
    "build",
    "dist", 
    "node_modules",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info"
]

# Test markers (comprehensive list)
markers = [
    # Environment markers
    "env: Environment-specific tests",
    "env_test: Environment-specific test compatibility validation",
    "test: Tests for test environment only",
    "dev: Tests for dev environment only",
    "staging: Tests for staging environment only",
    "prod: Tests for production environment only",
    
    # Test categories
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (component interaction)",
    "e2e: End-to-end tests (full workflow)",
    "smoke: Quick validation tests",
    "critical: Essential system tests",
    "mission_critical: Business-critical functionality tests",
    
    # Service markers
    "backend: Backend service tests",
    "auth: Auth service tests",
    "frontend: Frontend tests",
    "agents: Agent-related tests",
    
    # Resource markers
    "real_llm: Requires real LLM API",
    "real_database: Requires real database",
    "real_services: Requires external services",
    "requires_redis: Requires Redis",
    "requires_postgres: Requires PostgreSQL",
    
    # Performance markers
    "slow: Long-running tests (>5s)",
    "fast: Quick tests (<1s)",
    "performance: Performance benchmarks",
    "stress: High load tests",
    
    # Special markers
    "flaky: Tests that may fail intermittently",
    "skip_ci: Skip in CI environment",
    "manual: Manual tests only",
    "resilience: System resilience tests",
    "security: Security validation tests",
    
    # Additional high-usage markers
    "asyncio: Asynchronous test functions",
    "websocket: WebSocket-related tests",
    "golden_path: Golden path user flow tests",
    "deployment: Deployment-related tests",
    "regression: Regression prevention tests",
    "timeout: Tests with custom timeout settings",
    "skipif: Conditional test skipping",
    "xfail: Expected to fail tests",
    "parametrize: Parameterized tests",
    "usefixtures: Tests using specific fixtures",
    
    # Business and system markers
    "agent_execution: Agent execution tests",
    "agent_execution_order: Agent execution order validation tests",
    "business_critical: Business-critical functionality tests", 
    "ssot_delegation: Single Source of Truth delegation tests",
    "execution_tracking: Execution tracking tests",
    "critical_type_safety: Critical type safety tests",
    "database: Database-related tests",
    "id_system: ID system tests",
    "business_requirements: Business requirements tests",
    "user_isolation: User isolation tests",
    "error_handling: Error handling tests",
    "isolation_critical: Isolation-critical tests", 
    "state_persistence: State persistence tests",
    "phase_transitions: Phase transition tests",
    "user_context_violations: User context violation tests",
    "race_conditions: Race condition tests",
    "id_system_validation: ID system validation tests",
    "benchmark: Benchmark tests",
    "integration_points: Integration point tests",
    "workflow_coordination: Workflow coordination tests",
    "circuit_breaker: Circuit breaker tests",
    "auth_validation: Authentication validation tests",
    "business_workflow: Business workflow tests",
    "auth_integration: Authentication integration tests",
    "business_value: Business value tests",
    "config_validation: Configuration validation tests",
    "resource_monitoring: Resource monitoring tests",
    "thread_safety: Thread safety tests",
    "memory_isolation: Memory isolation tests",
    "startup_validation: Startup validation tests",
    "api_integration: API integration tests",
    "websocket_integration: WebSocket integration tests",
    "session_management: Session management tests",
    "token_management: Token management tests",
    "recovery: Recovery tests",
    "monitoring: Monitoring tests",
    "infrastructure: Infrastructure tests",
    "no_skip: Tests that should never be skipped",
    "compatibility: Compatibility tests",
    "comprehensive: Comprehensive tests",
    "concurrency: Concurrency tests",
    "coordination: Coordination tests",
    "enterprise: Enterprise tests",
    "factory_pattern: Factory pattern tests",
    "isolation: Isolation tests",
    "multi_user: Multi-user tests",
    "orchestration: Orchestration tests",
    "security: Security tests",
    "validation: Validation tests",
    "websocket_events: WebSocket event tests",
    
    # Final missing markers
    "websocket_critical: Critical WebSocket tests",
    "observability: Observability tests", 
    "workflow_logic: Workflow logic tests",
    "timeout_management: Timeout management tests",
    "config: Configuration tests",
    "migration: Migration tests",
    "models: Model tests",
    "ssot_validation: SSOT validation tests",
    "toolregistry: Tool registry tests",
    "docker_required: Tests that require Docker services",
    "no_docker: Tests that work without Docker",
    "skip_if_no_staging: Skip if staging environment not available",
    "documentation: Documentation and validation tests",
    "validation: Validation tests",
    
    # Final batch of missing markers
    "context_building: Context building tests",
    "environment: Environment tests", 
    "performance_monitoring: Performance monitoring tests",
    "pipeline_execution: Pipeline execution tests",
    "protocol_parsing: Protocol parsing tests",
    "workflow_execution: Workflow execution tests",
    
    # Final missing markers (last batch)
    "authentication: Authentication tests",
    "flow_context: Flow context tests",
    "ssot_compliance: SSOT compliance tests",
    "user_engine_delegation: User engine delegation tests", 
    "websocket_coordination: WebSocket coordination tests",
    
    # Truly final markers
    "bug_reproduction: Bug reproduction tests",
    "isolation_status: Isolation status tests",
    "workflow_validation: Workflow validation tests",
    
    # Issue #553 test markers
    "issue_553_reproduction: Issue #553 marker reproduction tests",
    "issue_553_validation: Issue #553 marker validation tests", 
    "issue_553_config: Issue #553 configuration tests",
    "issue_553_golden_path: Issue #553 golden path accessibility tests",
    
    # Final missing markers (Issue #553 completion)
    "app_factory: Application factory pattern tests",
    "health_checks: Health check and service status tests",
    "ssot_violation: SSOT violation detection and remediation tests",
    
    # Missing marker for auth service secret loader tests (Issue #687)
    "secret_loader: Secret loader component tests",
    "ssot: Single Source of Truth pattern tests",
    
    # Additional comprehensive marker definitions (Issue #553 Resolution)
    "infrastructure_validation: Infrastructure validation tests",
    "sessionmiddleware: Session middleware tests",
    "windows_asyncio: Windows-specific asyncio tests",
    "must_fail_initially: Tests that must fail initially to prove gaps exist",
    "reproduction_tests: Tests that reproduce specific issues",
    "L3: Level 3 escalation tests",
    "access_logging: Access logging tests",
    "agent: Agent tests",
    "agent_coordination: Agent coordination tests",
    "agent_critical: Agent critical tests",
    "agent_events: Agent event tests",
    "agent_execution_flows: Agent execution flow tests",
    "agent_execution_routing: Agent execution routing tests",
    "agent_factory_testing: Agent factory testing tests",
    "agent_integration: Agent integration tests",
    "agent_orchestration: Agent orchestration tests",
    "agent_registry_integration: Agent registry integration tests",
    "agent_state_management: Agent state management tests",
    "agent_websocket_coordination: Agent websocket coordination tests",
    "api: API tests",
    "api_contract: API contract tests",
    "async_safety: Async safety tests",
    "audit_logging: Audit logging tests",
    "audit_trail: Audit trail tests",
    "audit_trails: Audit trails tests",
    "auth_critical: Auth critical tests",
    "auth_flow: Auth flow tests",
    "auth_required: Auth required tests",
    "auth_resilience: Auth resilience tests",
    "auth_service: Auth service tests",
    "auth_service_integration: Auth service integration tests",
    "auth_testing: Auth testing tests",
    "authenticated: Authenticated tests",
    "authentication_compliance: Authentication compliance tests",
    "backup_recovery: Backup recovery tests",
    "baseline: Baseline tests",
    "batch_processing: Batch processing tests",
    "broadcast_performance: Broadcast performance tests",
    "business_continuity: Business continuity tests",
    "business_metrics: Business metrics tests",
    "business_temp: Business temp tests",
    "business_value_validation: Business value validation tests",
    "capacity_planning: Capacity planning tests",
    "cascade_failure_testing: Cascade failure testing tests",
    "chat: Chat tests",
    "chat_events: Chat event tests",
    "chat_flow: Chat flow tests",
    "child_context_tracking: Child context tracking tests",
    "circuit_breaker_states: Circuit breaker state tests",
    "class_validation: Class validation tests",
    "claude_commands: Claude command tests",
    "cleanup_critical: Cleanup critical tests",
    "cleanup_error_handling: Cleanup error handling tests",
    "cleanup_stress: Cleanup stress tests",
    "cleanup_types: Cleanup type tests",
    "cleanup_validation: Cleanup validation tests",
    "cloud_run: Cloud Run tests",
    "collection_fix: Collection fix tests",
    "communication: Communication tests",
    "completion_tracking: Completion tracking tests",
    "compliance: Compliance tests",
    "compliance_validation: Compliance validation tests",
    "concurrent: Concurrent tests",
    "concurrent_cleanup: Concurrent cleanup tests",
    "concurrent_enterprise: Concurrent enterprise tests",
    "concurrent_isolation: Concurrent isolation tests",
    "concurrent_safe: Concurrent safe tests",
    "concurrent_security: Concurrent security tests",
    "concurrent_users: Concurrent users tests",
    "concurrent_websocket_validation: Concurrent websocket validation tests",
    "configuration: Configuration tests",
    "configuration_audit: Configuration audit tests",
    "configuration_critical: Configuration critical tests",
    "configuration_drift: Configuration drift tests",
    "connection_management: Connection management tests",
    "consolidation_validation: Consolidation validation tests",
    "context_creation: Context creation tests",
    "context_hierarchy: Context hierarchy tests",
    "context_management: Context management tests",
    "context_preservation: Context preservation tests",
    "context_validation: Context validation tests",
    "continuous_monitoring: Continuous monitoring tests",
    "conversation_context: Conversation context tests",
    "corpus_admin: Corpus admin tests",
    "coverage_validation: Coverage validation tests",
    "cpu_isolation: CPU isolation tests",
    "cross_device_recovery: Cross device recovery tests",
    "cross_platform: Cross platform tests",
    "cross_service: Cross service tests",
    "cross_system: Cross system tests",
    "cycle_31: Cycle 31 tests",
    "cycle_32: Cycle 32 tests",
    "cycle_33: Cycle 33 tests",
    "cycle_34: Cycle 34 tests",
    "cycle_35: Cycle 35 tests",
    "cycle_36: Cycle 36 tests",
    "cycle_37: Cycle 37 tests",
    "cycle_38: Cycle 38 tests",
    "cycle_39: Cycle 39 tests",
    "cycle_40: Cycle 40 tests",
    "data_integrity: Data integrity tests",
    "data_retention: Data retention tests",
    "database_integrity: Database integrity tests",
    "database_testing: Database testing tests",
    "delayed_recovery: Delayed recovery tests",
    "demo_mode: Demo mode tests",
    "deployment_critical: Deployment critical tests",
    "deployment_validation: Deployment validation tests",
    "deprecated: Deprecated tests",
    "directory_structure: Directory structure tests",
    "disaster_recovery: Disaster recovery tests",
    "docker: Docker tests",
    "e2e_auth_required: E2E auth required tests",
    "e2e_gcp_staging: E2E GCP staging tests",
    "e2e_helpers: E2E helper tests",
    "e2e_staging: E2E staging tests",
    "edge_case: Edge case tests",
    "enterprise_critical: Enterprise critical tests",
    "enterprise_scaling: Enterprise scaling tests",
    "enterprise_security: Enterprise security tests",
    "enterprise_sso: Enterprise SSO tests",
    "environment_specific: Environment specific tests",
    "environment_validation: Environment validation tests",
    "error: Error tests",
    "error_rate_monitoring: Error rate monitoring tests",
    "error_recovery: Error recovery tests",
    "error_scenarios: Error scenario tests",
    "event_delivery: Event delivery tests",
    "execution_context: Execution context tests",
    "expected_failure: Expected failure tests",
    "expected_to_fail: Expected to fail tests",
    "factory_coordination: Factory coordination tests",
    "factory_isolation: Factory isolation tests",
    "factory_metrics: Factory metrics tests",
    "factory_patterns: Factory pattern tests",
    "factory_structure: Factory structure tests",
    "fallback_prevention: Fallback prevention tests",
    "fast_test: Fast test tests",
    "filesystem_isolation: Filesystem isolation tests",
    "first_time_user: First time user tests",
    "fixture_validation: Fixture validation tests",
    "frontend_coordination: Frontend coordination tests",
    "gcp: GCP tests",
    "gcp_infrastructure: GCP infrastructure tests",
    "gcp_staging: GCP staging tests",
    "github: GitHub tests",
    "github_integration: GitHub integration tests",
    "graceful_degradation: Graceful degradation tests",
    "health: Health tests",
    "health_check: Health check tests",
    "heartbeat_monitoring: Heartbeat monitoring tests",
    "hierarchy_validation: Hierarchy validation tests",
    "high_difficulty: High difficulty tests",
    "high_load: High load tests",
    "id_collision_prevention: ID collision prevention tests",
    "id_consistency: ID consistency tests",
    "id_contamination: ID contamination tests",
    "id_extraction_consistency: ID extraction consistency tests",
    "id_validation: ID validation tests",
    "immutability_validation: Immutability validation tests",
    "implementation_status: Implementation status tests",
    "import_dependencies: Import dependencies tests",
    "import_validation: Import validation tests",
    "infrastructure_dependencies: Infrastructure dependencies tests",
    "initialization: Initialization tests",
    "interface_violations: Interface violation tests",
    "interservice: Interservice tests",
    "issue_131: Issue 131 tests",
    "issue_135: Issue 135 tests",
    "issue_263: Issue 263 tests",
    "issue_263_fix: Issue 263 fix tests",
    "l3: L3 tests",
    "lifecycle_management: Lifecycle management tests",
    "lightweight_services: Lightweight service tests",
    "load: Load tests",
    "load_balancing: Load balancing tests",
    "load_test: Load test tests",
    "load_testing: Load testing tests",
    "logging_metrics: Logging metrics tests",
    "medium: Medium tests",
    "memory: Memory tests",
    "memory_management: Memory management tests",
    "memory_tracking: Memory tracking tests",
    "message_context_validation: Message context validation tests",
    "message_routing: Message routing tests",
    "metrics_tracking: Metrics tracking tests",
    "middleware: Middleware tests",
    "module_structure: Module structure tests",
    "monitoring_integration: Monitoring integration tests",
    "multi_tenant_isolation: Multi-tenant isolation tests",
    "multi_user_isolation: Multi-user isolation tests",
    "multiuser: Multiuser tests",
    "network_isolation: Network isolation tests",
    "no_docker_required: No Docker required tests",
    "no_mocks: No mocks tests",
    "oauth: OAuth tests",
    "p1_critical_failure: P1 critical failure tests",
    "performance_load: Performance load tests",
    "phase2: Phase 2 tests",
    "phase_1_pre_consolidation: Phase 1 pre-consolidation tests",
    "phase_2_consolidation: Phase 2 consolidation tests",
    "pipeline_validation: Pipeline validation tests",
    "post_deployment: Post deployment tests",
    "pre_deployment: Pre deployment tests",
    "priority_p0: Priority P0 tests",
    "priority_p1: Priority P1 tests",
    "production: Production tests",
    "production_simulation: Production simulation tests",
    "production_validation: Production validation tests",
    "pytest_fixtures: Pytest fixture tests",
    "race_condition: Race condition tests",
    "race_condition_detection: Race condition detection tests",
    "race_condition_testing: Race condition testing tests",
    "rapid_messaging: Rapid messaging tests",
    "rate_limiting: Rate limiting tests",
    "real_e2e: Real E2E tests",
    "real_time_feedback: Real time feedback tests",
    "real_websocket: Real websocket tests",
    "reconnection: Reconnection tests",
    "recovery_critical: Recovery critical tests",
    "recovery_performance: Recovery performance tests",
    "recovery_security: Recovery security tests",
    "redis: Redis tests",
    "regression_reproduction: Regression reproduction tests",
    "reliability: Reliability tests",
    "reproduction: Reproduction tests",
    "requires_auth: Requires auth tests",
    "requires_database: Requires database tests",
    "requires_docker: Requires Docker tests",
    "requires_websocket: Requires websocket tests",
    "resource_isolation: Resource isolation tests",
    "resource_limits: Resource limits tests",
    "resource_management: Resource management tests",
    "retry: Retry tests",
    "revenue_protection: Revenue protection tests",
    "routing_validation: Routing validation tests",
    "security_critical: Security critical tests",
    "serialization: Serialization tests",
    "service_connectivity: Service connectivity tests",
    "service_coordination: Service coordination tests",
    "service_integration: Service integration tests",
    "session: Session tests",
    "session_integration: Session integration tests",
    "session_persistence: Session persistence tests",
    "session_security: Session security tests",
    "skip: Skip tests",
    "skip_if_no_real_llm: Skip if no real LLM tests",
    "sla: SLA tests",
    "slo_validation: SLO validation tests",
    "soak: Soak tests",
    "some_business_marker: Some business marker tests",
    "ssot_ids: SSOT IDs tests",
    "ssot_migration: SSOT migration tests",
    "staging_compatible: Staging compatible tests",
    "staging_environment: Staging environment tests",
    "staging_gcp: Staging GCP tests",
    "staging_only: Staging only tests",
    "staging_regression_prevention: Staging regression prevention tests",
    "staging_remote: Staging remote tests",
    "staging_validation: Staging validation tests",
    "startup: Startup tests",
    "startup_cache: Startup cache tests",
    "startup_database: Startup database tests",
    "startup_dependencies: Startup dependencies tests",
    "startup_init: Startup init tests",
    "startup_services: Startup service tests",
    "state_isolation: State isolation tests",
    "state_management: State management tests",
    "sub_agent_coordination: Sub-agent coordination tests",
    "summary: Summary tests",
    "supervisor_isolation: Supervisor isolation tests",
    "synchronization: Synchronization tests",
    "syntax_comprehensive: Syntax comprehensive tests",
    "syntax_validation: Syntax validation tests",
    "system_validation: System validation tests",
    "temp_marker_1: Temp marker 1 tests",
    "temp_marker_2: Temp marker 2 tests",
    "thread_isolation: Thread isolation tests",
    "thread_lifecycle: Thread lifecycle tests",
    "thread_management: Thread management tests",
    "thread_performance: Thread performance tests",
    "thread_persistence: Thread persistence tests",
    "thread_scaling: Thread scaling tests",
    "thread_service_testing: Thread service testing tests",
    "threading: Threading tests",
    "timeout_edge_cases: Timeout edge case tests",
    "timeout_race_conditions: Timeout race condition tests",
    "token_refresh: Token refresh tests",
    "tool_execution_workflows: Tool execution workflow tests",
    "tool_notifications: Tool notification tests",
    "ultra_strict_isolation: Ultra strict isolation tests",
    "undefined_test_marker: Undefined test marker tests",
    "undefined_test_marker_272: Undefined test marker 272 tests",
    "unified_id_manager: Unified ID manager tests",
    "unknown_marker_1: Unknown marker 1 tests",
    "unknown_marker_2: Unknown marker 2 tests",
    "user_behavior_analytics: User behavior analytics tests",
    "user_context: User context tests",
    "user_context_integration: User context integration tests",
    "user_flow: User flow tests",
    "user_journey: User journey tests",
    "validation_patterns: Validation pattern tests",
    "validation_test: Validation test tests",
    "websocket_1011: WebSocket 1011 tests",
    "websocket_auth: WebSocket auth tests",
    "websocket_auth_poc: WebSocket auth POC tests",
    "websocket_auth_protocol: WebSocket auth protocol tests",
    "websocket_authentication: WebSocket authentication tests",
    "websocket_bridge: WebSocket bridge tests",
    "websocket_core: WebSocket core tests",
    "websocket_emitter_consolidation: WebSocket emitter consolidation tests",
    "websocket_errors: WebSocket error tests",
    "websocket_infrastructure: WebSocket infrastructure tests",
    "websocket_isolation: WebSocket isolation tests",
    "websocket_performance: WebSocket performance tests",
    "websocket_protocol: WebSocket protocol tests",
    "websocket_race_conditions: WebSocket race condition tests",
    "websocket_regression: WebSocket regression tests",
    "websocket_reliability: WebSocket reliability tests",
    "websocket_resilience: WebSocket resilience tests",
    "websocket_security: WebSocket security tests",
    "websocket_service: WebSocket service tests",
    "websocket_staging: WebSocket staging tests",
    "websocket_thread: WebSocket thread tests",
    "websocket_threading: WebSocket threading tests",
    "websocket_unified_auth: WebSocket unified auth tests",
    "websocket_validation: WebSocket validation tests",
    "windows_deadlock: Windows deadlock tests"
]

# Coverage settings
[tool.coverage.run]
source = [
    "netra_backend/app",
    "auth_service/auth_core",
    "test_framework"
]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/conftest.py",
    "*/test_*.py"
]
parallel = true
concurrency = ["thread", "multiprocessing"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "if TYPE_CHECKING:",
    "class .*\\(Protocol\\):"
]
precision = 2
show_missing = true
skip_covered = false
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true

[tool.coverage.json]
output = "coverage.json"
show_contexts = true

# Black formatter settings
[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | node_modules
  | __pycache__
)/
'''

# isort settings for import sorting
[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
force_single_line = false
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# mypy settings for type checking
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true

# Performance profiling
[tool.pytest.profiling]
enabled = false
sort = "cumulative"
strip_dirs = true

# Test execution optimization
[tool.pytest.execution]
# Use pytest-xdist for parallel execution
workers = "auto"  # Automatically determine optimal worker count
# Group tests by file for better resource utilization
dist_mode = "loadfile"
# Reuse database connections
reuse_db = true
# Cache expensive fixtures
fixture_cache = true